# first-bazel-proj

./: .gitignore  README.md  notes.md
src/: BUILD.bazel  HelloWorld.java  IntMultiplier.java  IntMultiplierTest.java  hello_world.py  int_multiplier.py  int_multiplier_test.py
