###############
## Java Stuff
###############

java_binary(
      name = "HelloWorld",
      srcs = ["HelloWorld.java"],
      deps = [
          ":LibraryExample",
      ]
)

java_library(
       name = "LibraryExample",
       srcs = ["IntMultiplier.java"],
)

# create a test to verify the behavior of the java_library "LibraryExample"
java_test(
       name = "LibraryExampleTest",
       srcs = ["IntMultiplierTest.java"],
       deps = [
            ":LibraryExample",
            "//third_party:junit4",
       ],
       test_class = "IntMultiplierTest",
)

###############
## Python Stuff
###############

py_binary(
    name="hello_world",
    srcs = ["hello_world.py"],
)